# poly_surge

./: .gitignore  Cargo.toml  README.md  ResearchProposal.md
benches/: polytope_benchmarks.rs
examples/: profile_removal.rs
original_impls_with_deps/: incremental_hull.rs  incremental_polytope_mono.rs  polytope_benchmarks.rs  vertex_enum_comparison.rs
src/: incremental_hull.rs  incremental_polytope.rs  lib.rs  spatial_hash.rs
